Remove deprecated JVM args